--- a/index.html
+++ b/index.html
@@ -1,28 +1,88 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Hyperlane 空投批量查询</title>
   <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 30px; }
-    textarea { width: 100%; height: 160px; margin-bottom: 10px; }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      max-width: 900px;
+      margin: auto;
+      padding: 30px;
+      background: #fdfdfd;
+    }
+
+    textarea {
+      width: 100%;
+      height: 160px;
+      margin-bottom: 10px;
+      padding: 10px;
+      font-size: 14px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      color: #333;
+    }
+
+    textarea::placeholder {
+      color: #aaa;
+    }
+
     button {
-      padding: 10px 20px; background: #4caf50; color: white; border: none;
-      border-radius: 5px; cursor: pointer;
+      padding: 10px 20px;
+      background: #4caf50;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 15px;
     }
-    button:hover { background: #388e3c; }
-    pre {
-      background: #f7f7f7;
-      padding: 15px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      white-space: pre-wrap;
-      word-break: break-all;
+
+    button:disabled {
+      background: #9e9e9e;
+      cursor: not-allowed;
     }
+
+    button:hover:not(:disabled) {
+      background: #388e3c;
+    }
+
+    table {
+      width: 100%;
+      margin-top: 20px;
+      border-collapse: collapse;
+      font-size: 14px;
+    }
+
+    th, td {
+      padding: 10px;
+      border: 1px solid #ccc;
+      text-align: center;
+    }
+
+    th {
+      background: #f0f0f0;
+    }
+
+    .success { background-color: #e8f5e9; }
+    .fail { background-color: #f9f9f9; color: #999; }
+
     .footer {
-      margin-top: 40px;
-      text-align: right;
+      position: fixed;
+      bottom: 20px;
+      right: 30px;
       font-size: 13px;
+    }
+
+    .link {
+      margin-top: 20px;
+      font-size: 14px;
+    }
+
+    .summary {
+      margin-top: 10px;
+      font-size: 15px;
+      font-weight: bold;
+      color: #444;
     }
   </style>
 </head>
@@ -31,9 +91,25 @@
   <h2>Hyperlane 批量查询空投资格</h2>
   <p>每行一个钱包地址：</p>
   <textarea id="input" placeholder="例如：\n0x123...\n0xabc..."></textarea><br>
-  <button onclick="check()">开始查询</button>
+  <button id="queryBtn" onclick="check()">开始查询</button>
 
-  <pre id="output"></pre>
+  <div class="link">
+    🌐 <a href="https://claim.hyperlane.foundation/airdrop-registration" target="_blank">空投注册入口</a>
+  </div>
+
+  <div class="summary" id="summary"></div>
+
+  <table id="resultTable" style="display:none;">
+    <thead>
+      <tr>
+        <th>序号</th>
+        <th>地址</th>
+        <th>是否符合资格</th>
+        <th>数量</th>
+      </tr>
+    </thead>
+    <tbody id="resultBody"></tbody>
+  </table>
 
   <div class="footer">
     作者推特：<a href="https://x.com/0xXIAOc" target="_blank">@0xXIAOc</a>
@@ -43,32 +119,56 @@
     async function check() {
       const raw = document.getElementById("input").value.trim();
       const addresses = raw.split('\n').map(x => x.trim()).filter(Boolean);
-      if (!addresses.length) return alert("请输入至少一个钱包地址");
+      if (!addresses.length) return alert("请输入地址");
+
+      const btn = document.getElementById("queryBtn");
+      btn.innerText = "查询中...";
+      btn.disabled = true;
 
       const url = `https://hyperlane-9eieiuiek-7ccccc21xs-projects.vercel.app/api/check-hyperlane?addresses=${addresses.join(',')}`;
+      const tbody = document.getElementById("resultBody");
+      const table = document.getElementById("resultTable");
+      const summary = document.getElementById("summary");
 
-      let output = "查询中...\n";
-      document.getElementById("output").innerText = output;
+      tbody.innerHTML = "";
+      table.style.display = "table";
+      summary.innerText = "";
+
+      let ok = 0, fail = 0;
 
       try {
         const res = await fetch(url);
         const data = await res.json();
 
-        output = "";
         addresses.forEach((addr, i) => {
           const d = data.results[addr];
+          let row = document.createElement("tr");
+
+          const tdIndex = `<td>${i + 1}</td>`;
+          const tdAddr = `<td>${addr}</td>`;
+
           if (d?.response?.isEligible) {
-            const amount = d.response.eligibilities[0]?.amount || "未知";
-            output += `${i + 1}. ${addr} ✅ 有资格（${amount}）\n`;
+            ok++;
+            const amount = d.response.eligibilities?.[0]?.amount || "未知";
+            row.className = "success";
+            row.innerHTML = `${tdIndex}${tdAddr}<td>✅ 是</td><td>${amount}</td>`;
           } else {
-            output += `${i + 1}. ${addr} ❌ 无资格\n`;
+            fail++;
+            row.className = "fail";
+            row.innerHTML = `${tdIndex}${tdAddr}<td>❌ 否</td><td>0</td>`;
           }
+
+          tbody.appendChild(row);
         });
+
+        summary.innerText = `✅ 共 ${addresses.length} 个地址，符合资格 ${ok} 个，未资格 ${fail} 个`;
+
       } catch (e) {
-        output = "❌ 查询失败：" + e.message;
+        summary.innerText = "❌ 查询失败：" + e.message;
       }
 
-      document.getElementById("output").innerText = output;
+      btn.innerText = "开始查询";
+      btn.disabled = false;
     }
   </script>
 
