--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <h2>Hyperlane 批量查询空投资格</h2>
   <p>每行一个钱包地址：</p>
-  <textarea id="input" placeholder="例如：\n0x123...\n0xabc..."></textarea><br>
+  <textarea id="input" placeholder=""></textarea><br>
   <button id="queryBtn" onclick="check()">开始查询</button>
 
   <div class="link">
